M2 - Stampate info come stringhe sul DOM

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
     
+    <div class="container">
+        <!-- Team member cards will be dynamically inserted here -->
+    </div>
     <script src="./js/main.js"></script>
 </body>
 </html>
