--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 <body>
     
-    <div class="container">
-        <!-- Team member cards will be dynamically inserted here -->
+    <h1 class="text-center">Meet our team</h1>
+    <div class="ms_container d-flex flex-wrap">
+            <!-- Team member cards will be dynamically inserted here -->
     </div>
     <script src="./js/main.js"></script>
 </body>
